# Skyrim-Upscaler

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
cmake/: AddCXXFiles.cmake  XSEPlugin.cmake
include/: PCH.h
include/PDPerfPlugin/: PDPerfPlugin.h
include/ReShade/: reshade.hpp
src/: Common.h  D3D11.cpp  D3D11VariableRateShading.cpp  D3D11VariableRateShading.h  DRS.cpp  DRS.h  ReShadePlugin.cpp  ReShadePlugin.h  SettingGUI.cpp  SettingGUI.h  SkyrimUpscaler.cpp  SkyrimUpscaler.h  UpscalerHooks.cpp  XSEPlugin.cpp  d3d11_proxy.cpp  d3d11_proxy.h
src/RE/: BSGraphics.h
src/hlsl/: Bicubic.hlsl  Bicubic.inc  Bicubic_ps.inc  blend_ps.hlsl  blend_ps.inc  blur_ps.hlsl  blur_ps.inc  cancel_jitter_ps.hlsl  cancel_jitter_ps.inc  debug_ps.hlsl  debug_ps.inc  flip.ps.hlsl  flip.ps.inc  flip.vs.inc  flip_ps.inc  flip_vs.hlsl  flip_vs.inc  upscale_depth_ps.hlsl  upscale_depth_ps.inc  xbr_edge_ps.hlsl  xbr_edge_ps.inc  xbr_ps.hlsl  xbr_ps.inc
